apps/authority/authority.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authority
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authority
  namespace: authority
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authority
  template:
    metadata:
      labels:
        app: authority
    spec:
      containers:
      - name: authority
        image: 4719/authority:v1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/kpf/enable-config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: enable-config
          items:
          - key: Cleverbit__Enabled
            path: Cleverbit__Enabled
---
apiVersion: v1
kind: Service
metadata:
  name: authority
  namespace: authority
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: authority
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authority-virtualservice
  namespace: authority
spec:
  hosts:
  - "authority.cb-interview.com"
  gateways:
  - istio-ingress/istio-ingress
  http:
  - match:
    - uri:
        exact: /token
    route:
    - destination:
        host: authority-service.authority.svc.cluster.local
        port:
          number: 80
